<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/pref_server_cat" >
        <Preference
            android:key="servers"
            android:summary="@string/pref_server_title"
            android:title="@string/pref_server_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_extra_cat" >
        <Preference
            android:key="pref_extra_ydle"
            android:title="@string/pref_extra_plug_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_about_cat" >
        <Preference
            android:key="aNews"
            android:summary="@string/pref_news_desc"
            android:title="@string/pref_news_title" />
        <Preference
            android:key="aPropos"
            android:summary="@string/pref_about_desc"
            android:title="@string/pref_about_title" />
    </PreferenceCategory>

</PreferenceScreen>