<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
          <EditTextPreference
            android:inputType="text"
             android:defaultValue="Ydle"
            android:key="pref_nom"
            android:summary="@string/pref_server_name_desc"
            android:title="@string/pref_server_name_title" />
        <EditTextPreference
            android:defaultValue="@string/ipAdress"
            android:inputType="textWebEditText"
            android:key="pref_ip"
            android:summary="@string/pref_server_ip_desc"
            android:title="@string/pref_server_ip_title" >
        </EditTextPreference>
        <EditTextPreference
            android:defaultValue="80"
            android:inputType="textWebEditText"
            android:key="pref_port"
            android:summary="@string/pref_server_port_desc"
            android:title="@string/pref_server_port_title" >
        </EditTextPreference>
        <EditTextPreference
            android:inputType="text"
            android:key="pref_login"
            android:summary="@string/pref_server_login_desc"
            android:title="@string/pref_server_login_title" />
</PreferenceScreen>