<?xml version="1.0" encoding="utf-8"?>
<org.ydle.layout.DashboardLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dashboard"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_weight="1"
    android:background="#f8f9fe"
    tools:context="org.ydle.activity.MainActivity" >

    <Button
        android:id="@+id/btn_pieces"
        style="@style/DashboardButton"
        android:drawableTop="@drawable/home_r"
        android:text="@string/menu_room" />

    <Button
        android:id="@+id/btn_events"
        style="@style/DashboardButton"
        android:drawableTop="@drawable/icon_warning"
        android:text="@string/menu_events" />

    <Button
        android:id="@+id/btn_status"
        style="@style/DashboardButton"
        android:drawableTop="@drawable/icon_status"
        android:text="@string/menu_statut" />

    <Button
        android:id="@+id/btn_cmds"
        style="@style/DashboardButton"
        android:drawableTop="@drawable/icon_speech"
        android:text="@string/menu_cmd" />

    <Button
        android:id="@+id/btn_sarah"
        style="@style/DashboardButton"
        android:drawableTop="@drawable/icon_speech"
        android:text="@string/menu_cmd" />

</org.ydle.layout.DashboardLayout>