<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".YdleActivity" >

    <TextView
        android:id="@+id/aboutTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_about"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/contact"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/aboutTitle"
        android:layout_below="@+id/version"
        android:layout_marginTop="60dp"
        android:text="@string/about_contact"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/link"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/aboutTitle"
        android:layout_below="@+id/contact"
        android:layout_marginTop="15dp"
        android:clickable="true"
        android:focusable="true"
        android:linksClickable="false"
        android:onClick="web"
        android:text="@string/about_link"
        android:textColor="@android:color/black"
        android:textColorLink="@android:color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/version"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/aboutTitle"
        android:layout_below="@+id/aboutTitle"
        android:layout_margin="10sp"
        android:layout_marginTop="19dp"
        android:text="@string/version"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

</RelativeLayout>